--- a/img/about/index.html
+++ b/img/about/index.html
@@ -469,7 +469,7 @@
 							</div>
 							<div class="col-lg-4  col-md-6 col-sm-6">
 								<div class="single-footer-widget">
-									<h4>Contact Us</h4>
+									<h4>Contact lion stars</h4>
 									<p>
 										56/8, los angeles, rochy beach, Santa monica, United states of america - 1205
 									</p>
