--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 								<div class="single-footer-widget">
 									<h4>Contact Us</h4>
 									<p>
-										56/8, los angeles, rochy beach, Santa monica, United states of america - 1205
+										56/8, los angel, rochy beach, Santa monica, United states of america - 1205
 									</p>
 									<p class="number">
 										012-6532-568-9746 <br>
